Fixes z-index on dropdown menu at smallest breakpoint sizes
Was interfering with the portfolio homepage control buttons.

Closes #40

--- a/sass/molecules/_site-navigation.scss
+++ b/sass/molecules/_site-navigation.scss
@@ -10,6 +10,7 @@
         &.toggled-on {
             border-bottom: 0.5rem solid lighten($secondary-color, 10%);
             box-shadow: 0 5px 12px rgba(0,0,0,0.1);
+            z-index: 5;
         }
 
         @include media($small) {
